--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -75,7 +75,7 @@
               <tr>
                 <th>Mã nhân viên</th>
                 <th>Họ và tên</th>
-                <!--                <th>Tên tài khoản</th>-->
+                <th>Tên tài khoản</th>
                 <th>Email</th>
                 <th>Ngày sinh</th>
                 <th>Giới tính</th>
@@ -90,9 +90,7 @@
               <tr *ngFor="let employee of employeeList">
                 <td>{{employee.employeeId}}</td>
                 <td>{{employee.employeeName| uppercase}}</td>
-                <td hidden>{{employee.accountId}}</td>
-                <td hidden>{{employee.accountName}}</td>
-                <td hidden>{{employee.avartar}}</td>
+                <td>{{employee.accountName}}</td>
                 <td>{{employee.email}}</td>
                 <td>{{employee.birthday | date: "yyyy-MM-dd"}}</td>
                 <td>{{employee.gender}}</td>
@@ -100,10 +98,10 @@
                 <td>{{employee.address}}</td>
                 <td hidden>{{employee.isDelete}}</td>
                 <td>
-                  <button class="btn"(click)="updateEmployee(employee)"><i class="fa-solid fa-pen-clip" style="color: blue;padding-left: 25px"></i></button>
+                  <button class="btn"(click)="updateEmployee(employee)"><i class="fa-solid fa-pen-clip" style="color: blue;padding-left: 15px"></i></button>
                 </td>
                 <td>
-                  <button class="btn" (click)="openDialog(employee.employeeId)"><i class="fa-solid fa-trash-can" style="color: red;padding-left: 25px" ></i></button>
+                  <button class="btn" (click)="openDialog(employee.employeeId)"><i class="fa-solid fa-trash-can" style="color: red;padding-left: 15px" ></i></button>
                 </td>
               </tr>
 
