--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -24,6 +24,13 @@
             </a>
           </li>
 
+          <li>
+            <a [routerLink]="['/employee/cage']" class="nav-link ">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+              Quản lý chuồng nuôi
+            </a>
+          </li>
+
         </ul>
         <hr>
 
