--- a/angular/angular-template/src/app/sercurity/forgot-password/forgot-password.component.html
+++ b/angular/angular-template/src/app/sercurity/forgot-password/forgot-password.component.html
@@ -7,7 +7,7 @@
       và làm theo hướng dẫn để thay đổi mật khẩu
     </h4>
     <div class="formGroup">
-      <input type="text" name="email" formControlName="email" placeholder="Email" id="email"/>
+      <input type="email" name="email" formControlName="email" placeholder="Email" id="email"/>
       <span>Nhập email của bạn </span>
 
       <!--      validate email-->
