--- a/angular/angular-template/src/app/entities/entities-edit/entities-edit.component.html
+++ b/angular/angular-template/src/app/entities/entities-edit/entities-edit.component.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-lg-9 ">
 
-      <strong style="font-size: larger;margin-top: 10px; height: 20px">Cập nhật thông tin cá thể: {{entities.entitiesId}}</strong>
+      <strong style="font-size: larger;margin-top: 10px; height: 20px">Cập nhật thông tin cá thể: {{this.entities.entitiesId}}</strong>
 
       <hr/>
       <form style="max-width: 100%;" [formGroup]="entitiesForm" *ngIf="entitiesForm" (ngSubmit)="updateEntities()" class="bg-light">
@@ -42,8 +42,8 @@
           <div class="form-group row">
             <label  class="col-form-label ml-3"  style="width: 130px;">Mã chuồng nuôi<span class="text-danger">*</span></label>
             <div class="col-sm-8">
-              <select class="span2 form-control" formControlName="cageId">
-                <option class="span2 form-control" size="16" *ngFor="let cage of cageList">{{cage}}</option>
+              <select class="span2 form-control" formControlName="cageId" (change)="checkQuantity(entitiesForm.value.cageId)">
+                <option [selected]="selectCage==cage" class="span2 form-control" size="16" *ngFor="let cage of cageList">{{cage}}</option>
               </select>
               <div *ngFor="let validation of validationMessages.cageId">
               <span style="color: red;", *ngIf="entitiesForm.get('cageId').hasError(validation.type) && (entitiesForm.get('cageId').dirty || entitiesForm.get('cageId').touched)">
