--- a/angular/angular-template/src/app/entities/entities-create/entities-create.component.html
+++ b/angular/angular-template/src/app/entities/entities-create/entities-create.component.html
@@ -53,7 +53,7 @@
   <div class="row">
     <div class="col-lg-2 ml-0">
       <!-- Sidebar -->
-      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 1000px;">
+      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 236px; height: 1000px;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
           <span class="fs-4"><strong>Quản lý hệ thống</strong></span>
@@ -80,10 +80,10 @@
         <!-- Sidebar -->
       </div>
     </div>
-    <div class="col-lg-10 " style="">
-      <strong style="font-size: larger;margin-top: 10px; height: 20px">Khởi tạo thông tin vật nuôi</strong>
+    <div class="col-lg-10 " style="padding-left: 30px;padding-top: 20px">
+      <strong style="font-size: 18px; height: 20px; padding-left: 20px">Khởi tạo thông tin vật nuôi</strong>
       <hr/>
-      <form style="max-width: 100%; text-align: center; margin-left: 2em;margin-top: 2em " [formGroup]="entitiesForm" *ngIf="entitiesForm" (loadeddata)="getEntitiesId()" (ngSubmit)="createEntities()" class="bg-form">
+      <form style="max-width: 100%; text-align: center;justify-items: center;align-items: center; margin-left: 2em" [formGroup]="entitiesForm" *ngIf="entitiesForm" (loadeddata)="getEntitiesId()" (ngSubmit)="createEntities()" class="bg-form">
         <div class="container-fluid">
 
           <div class="form-group row">
@@ -97,7 +97,7 @@
               <span style="color: red;text-align: left", *ngIf="entitiesForm.get('cageId').hasError(validation.type) && (entitiesForm.get('cageId').dirty || entitiesForm.get('cageId').touched || entitiesForm.get('cageId').untouched)">
               {{validation.message}}</span>
               </div>
-              </div>
+            </div>
           </div>
           <div class="form-group row">
             <label  class="col-form-label ml-3" style="width: 130px;">Mã vật nuôi<span class="text-danger">*</span></label>
