--- a/angular/angular-template/src/app/employee/employee-create/employee-create.component.html
+++ b/angular/angular-template/src/app/employee/employee-create/employee-create.component.html
@@ -41,7 +41,7 @@
             <label class="col-form-label ml-3" style="width: 150px;">Mã nhân viên<span class="text-danger">*</span></label>
             <div class="col-sm-8">
               <div class="input-append date" id="dp1" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-                <input class="span2 form-control" size="16" type="text" formControlName="employeeId">
+                <input disabled class="span2 form-control" size="16" type="text" formControlName="employeeId">
               </div>
             </div>
           </div>
@@ -59,16 +59,6 @@
             </div>
           </div>
 
-          <!--          <div class="form-group row" >-->
-          <!--            <label  class="col-form-label ml-3" style="width: 150px;">Account ID<span class="text-danger">*</span></label>-->
-          <!--            <div class="col-sm-8">-->
-          <!--              <div class="input-append date" id="dp20" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
-          <!--                <input disable class="span2 form-control" size="16" type="text" formControlName="accountId">-->
-          <!--                <span style="color: red;"></span>-->
-          <!--              </div>-->
-          <!--            </div>-->
-          <!--          </div>-->
-
           <input hidden class="span2 form-control" size="16" type="text" formControlName="accountId">
 
           <div class="form-group row" >
@@ -76,7 +66,10 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input disable class="span2 form-control" size="16" type="text" formControlName="accountName">
-                <span style="color: red;"></span>
+                <div style="color: red;"  *ngFor="let validation of validationMessages.accountName">
+                <span *ngIf="employeeForm.get('accountName').hasError(validation.type) && (employeeForm.get('accountName').dirty || employeeForm.get('accountName').touched)">
+                {{validation.message}}</span>
+                </div>
               </div>
             </div>
           </div>
@@ -86,7 +79,10 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp4" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" type="password" formControlName="password">
-                <span style="color: red;"></span>
+                <div style="color: red;"  *ngFor="let validation of validationMessages.password">
+                <span *ngIf="employeeForm.get('password').hasError(validation.type) && (employeeForm.get('password').dirty || employeeForm.get('password').touched)">
+                {{validation.message}}</span>
+                </div>
               </div>
             </div>
           </div>
@@ -135,8 +131,11 @@
                 <input class="form-check-input"  id="gender-{{gender.id}}" type="radio" selected value="{{gender.value}}" name="{{gender.name}}"
                        formControlName="{{gender.name}}">
                 <label class="form-check-input" style="padding-top: 2px" for="gender-{{gender.id}}">{{gender.label}}</label>
+                <div style="color: red;"  *ngFor="let validation of validationMessages.gender">
+                <span *ngIf="employeeForm.get('gender').hasError(validation.type) && (employeeForm.get('gender').dirty || employeeForm.get('gender').untouched)">
+                {{validation.message}}</span>
+                </div>
               </div>
-
             </div>
           </div>
 
