--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -53,9 +53,8 @@
               href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
             <a
               class
-                ="dropdown-item"
-              href
-                ="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+                ="dropdown-item" [routerLink]="['/employee/cage']">
+              <i class="fa-solid fa-truck-moving"></i> Quản lý chuồng nuôi</a>
             <a
               class
                 ="dropdown-item"
