--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -54,8 +54,7 @@
             <a
               class
                 ="dropdown-item"
-              href
-                ="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+             [routerLink]="['/employee/cage']"> <i class="fa-solid fa-truck-moving"></i> Quản lý chuồng nuôi</a>
             <a
               class
                 ="dropdown-item"
