--- a/angular/angular-template/src/app/new/new-list/new-list.component.html
+++ b/angular/angular-template/src/app/new/new-list/new-list.component.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="col-lg-4">
-      <p class="mt-1 text-right">{{today| date: 'EEEE d/M/y H:mm:ss'}}</p>
+      <!-- <p class="mt-1 text-right">{{today| date: 'EEEE d/M/y H:mm:ss'}}</p> -->
       <!-- <div class="contact-div mb-3 mt-1">
         <div class="m-auto text-center center-contact">
           <div>
