--- a/angular/angular-template/src/app/new/weather/weather.component.html
+++ b/angular/angular-template/src/app/new/weather/weather.component.html
@@ -1,4 +1,4 @@
-<div id="divWeatherMain" class="my-3"> 
+<div id="divWeatherMain" class="my-1"> 
     <div *ngIf="WeatherData.isDay" class="weatherWidgetRow">
         <i class="fas fa-3x fa-sun sun"></i>  
     </div>   
@@ -11,6 +11,7 @@
     <div class="weatherWidgetRow" style="font-size: 32px;margin-top: 5px;">{{WeatherData.temp_celcius}}°</div>
     <div class="weatherWidgetRow" style="font-size: 12px;">{{WeatherData.temp_min}}° / {{WeatherData.temp_max}}°</div>
     <div class="weatherWidgetRow" style="font-size: 12px;">Cảm Giác Như: {{WeatherData.temp_feels_like}}°</div>
+    <div class="weatherWidgetRow" style="font-size: 15px;">{{today| date: 'EEEE d/M/y H:mm:ss'}}</div>
     <div class="weatherWidgetRow" style="font-size: 25px;margin-top: 10px;">Đà Nẵng</div>
     <div class="weatherWidgetRow" style="font-size: 12px;">Độ Ẩm: {{WeatherData.main.humidity}}%</div>
 </div>
