--- a/angular/angular-template/src/app/notification/notification-list/notification-list.component.css
+++ b/angular/angular-template/src/app/notification/notification-list/notification-list.component.css
@@ -50,3 +50,18 @@ element.style {
 }
 
 
+.nav-link-true{
+  display: block;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  background-color: #66c992;
+  color: #EDEDED;
+  pointer-events: none;
+}
+.nav-link-false{
+  display: block;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  background-color: transparent;
+  color: black;
+}
