--- a/angular/angular-template/src/app/cage/cage-list/cage-list.component.html
+++ b/angular/angular-template/src/app/cage/cage-list/cage-list.component.html
@@ -107,7 +107,7 @@
                   <i *ngIf="!isAcsSort&&sortBy=='closedDate'" (click)="setSortBy('closedDate')" class="fa-solid fa-angle-down"></i>
                 </th>
                 <th>Sửa</th>
-                <th>Chi tiết cá thể</th>
+                <th>Danh sách cá thể</th>
               </tr>
               </thead>
 
