--- a/angular/angular-template/src/app/component/contact/contact.component.html
+++ b/angular/angular-template/src/app/component/contact/contact.component.html
@@ -5,7 +5,8 @@
       <div class="col-lg-8 contact-left p-5">
         <form [formGroup]="contactForm" *ngIf="this.contactForm" (ngSubmit)="onSubmit()">
           <div class="form-row">
-            <H4> Thông tin liên hệ</H4>
+            <H3 style="text-align: center; min-width: 100%"> Thông tin liên hệ</H3>
+            <span style="font-size: 15px; text-decoration: underline solid; min-width: 100%; text-align: center; margin-bottom:15px">Nếu là khách hàng cũ chỉ cần nhập số điện thoại và email</span>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
@@ -18,7 +19,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="inputPhone">Số điện thoại: </label>
-              <input formControlName="phone" type="text" class="form-control" id="inputPhone">
+              <input formControlName="phone" type="text" class="form-control" id="inputPhone" (change)="checkCustomer()">
               <div class="validate" *ngFor="let validation of validationMessages.phone">
               <span *ngIf="contactForm.get('phone').hasError(validation.type) && (contactForm.get('phone').dirty || contactForm.get('phone').touched || contactForm.get('phone').untouched)">
               {{validation.message}}</span>
@@ -28,7 +29,7 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputEmail">Email: </label>
-              <input formControlName="email" type="email" class="form-control" id="inputEmail">
+              <input formControlName="email" type="email" class="form-control" id="inputEmail" (change)="checkCustomer()">
               <div class="validate" *ngFor="let validation of validationMessages.email">
               <span *ngIf="contactForm.get('email').hasError(validation.type) && (contactForm.get('email').dirty || contactForm.get('email').touched || contactForm.get('email').untouched)">
               {{validation.message}}</span>
@@ -50,7 +51,7 @@
             <div class="form-group col-md-3">
               <label>Tỉnh/TP: </label>
               <select class="form-control" formControlName="province" (change)="getDistrict()">
-                <option *ngFor="let province of provinceList" value="{{province.provinceId}}">{{province.provinceName}}</option>
+                <option [selected]="contactForm.value.province==province.provinceId" *ngFor="let province of provinceList" value="{{province.provinceId}}">{{province.provinceName}}</option>
               </select>
               <div class="validate" *ngFor="let validation of validationMessages.province">
               <span *ngIf="contactForm.get('province').hasError(validation.type) && (contactForm.get('province').dirty || contactForm.get('province').touched || contactForm.get('province').untouched)">
@@ -70,7 +71,7 @@
             <div class="form-group col-md-3">
               <label>Phường/Xã: </label>
               <select class="form-control" formControlName="ward">
-                <option *ngFor="let ward of wardlList" value="{{ward.wardId}}">{{ward.wardName}}</option>
+                <option [selected]="contactForm.get('ward').value==ward.wardId" *ngFor="let ward of wardList" value="{{ward.wardId}}">{{ward.wardName}}</option>
               </select>
               <div class="validate" *ngFor="let validation of validationMessages.ward">
               <span *ngIf="contactForm.get('ward').hasError(validation.type) && (contactForm.get('ward').dirty || contactForm.get('ward').touched || contactForm.get('ward').untouched)">
